Add Kochwebsite project to projekte.html

--- a/projekte.html
+++ b/projekte.html
@@ -55,10 +55,15 @@
           <td>Überblick über alle Kenntnisse, Sammlung meiner Projekte, Lebenslauf und erstes eigenes Projekt</td>
           <td>seit Juli 2025</td>
         </tr>
+        <tr>
+          <td>Kochwebsite</td>
+          <td>Rezepte, Ernährungswissen</td>
+          <td>seit November 2025</td>
+        </tr>
          <tfoot>
         <tr>
           <td colspan="2">Projekte gesamt</td>
-          <td>1</td>
+          <td>2</td>
         </tr>
       </tfoot>
     </table>
