Add project links to projekte.html

--- a/projekte.html
+++ b/projekte.html
@@ -47,6 +47,7 @@
           <th>Projektname</th>
           <th>Idee</th>
           <th>Zeitraum</th>
+          <th>Link</th>
         </tr>
       </thead>
       <tbody>
@@ -54,11 +55,13 @@
           <td>Eigene Website</td>
           <td>Überblick über alle Kenntnisse, Sammlung meiner Projekte, Lebenslauf und erstes eigenes Projekt</td>
           <td>seit Juli 2025</td>
+          <td><a href="https://michaellestrassegger.github.io/mywebsite/index.html">Meine Website</a></td>
         </tr>
         <tr>
           <td>Kochwebsite</td>
           <td>Rezepte, Ernährungswissen</td>
           <td>seit November 2025</td>
+          <td><a href="https://michaellestrassegger.github.io/kochbuch/">Kochen mit Michaelle</a></td>
         </tr>
          <tfoot>
         <tr>
