--- a/projekte.html
+++ b/projekte.html
@@ -65,8 +65,8 @@
         </tr>
          <tfoot>
         <tr>
-          <td colspan="2">Projekte gesamt</td>
-          <td>2</td>
+          <td colspan="2" style="bold">Projekte gesamt</td>
+          <td style="bold">2</td>
         </tr>
       </tfoot>
     </table>
