Make footer text bold in ideen.html

--- a/ideen.html
+++ b/ideen.html
@@ -84,8 +84,8 @@
 
       <tfoot>
         <tr>
-          <td colspan="2">Gesammelte Ideen</td>
-          <td>7</td>
+          <td colspan="2" style="bold">Gesammelte Ideen</td>
+          <td style="bold">7</td>
         </tr>
       </tfoot>
     </table>
